--- a/package.json
+++ b/package.json
@@ -17,5 +17,17 @@
     "nodejs"
   ],
   "author": "Jose Miguel Sepulveda <jozheprog@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "axios": "^0.19.0",
+    "dotenv": "^8.1.0",
+    "jest": "^24.9.0",
+    "nodemon": "^1.19.2"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "oracledb": "^4.0.1",
+    "sqlstring": "^2.3.1"
+  }
 }
