--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
+    "dev": "nodemon -r dotenv/config index.js",
     "test": "jest --watchAll"
   },
   "repository": {
@@ -26,8 +26,6 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "oracledb": "^4.0.1",
-    "sqlstring": "^2.3.1"
+    "express": "^4.17.1"
   }
 }
