Se generan comentarios

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# Fichero ejemplo de las variables de entorno para trabajar localmente (Recordar crear fichero .env con las variables)
+
 # Ejecutar como
 NODE_ENV=development
 
