Ejemplo para variable de ambiente

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,12 @@ NODE_ENV=development
 
 # Puerto por defecto a levantar aplicacion
 PORT=8080
+
+# Datos de conexion para schema EXAMPLE
+ND_DB_ORA_EXAMPLE_USER=user
+ND_DB_ORA_EXAMPLE_PASSWORD=password
+ND_DB_ORA_EXAMPLE_CONNECTION=host:port/sid
+ND_DB_ORA_EXAMPLE_POOL_MAX=10
+ND_DB_ORA_EXAMPLE_POOL_MIN=2
+ND_DB_ORA_EXAMPLE_POOL_INCREMENT=1
+ND_DB_ORA_EXAMPLE_POOL_TIMEOUT=30000
